--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/honeykjoule/tinychannel#readme",
   "dependencies": {
+    "@googleapis/gmail": "^5.0.4",
     "dotenv": "^16.3.1",
-    "googleapis": "^126.0.0",
     "openai": "^4.2.0"
   },
   "devDependencies": {
